# Resonance

./: .gitignore  README.md  data.db  pyproject.toml  template
src/resonance/: ai.py  env.py  main.py  resonance.py
src/resonance/models/llm/: context.py  generation.py  identity.py  memory.py  prompt_builder.py  settings.template.py
src/resonance/models/llm/context/: main.py
src/resonance/models/llm/generation/: main.py
src/resonance/models/llm/layers/: main.py  perception.py
src/resonance/models/llm/layers/generation/: main.py  tools.py
src/resonance/models/llm/layers/identity/: identity.py
src/resonance/models/llm/layers/internal_state/: main.py
src/resonance/models/llm/layers/memories/: main.py
src/resonance/models/llm/layers/perception/: main.py
src/resonance/models/llm/logs/: main.py
src/resonance/tools/: date.py  jsontools.py  sql.py
