[build-system]
requires = ["setuptools>=61.0", "requests", "ollama"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance"
version = "1.0.0"
authors = [
  { name="Thomas Wongsokarto", email="tom.wongsokarto@gmail.com" },
]
description = "Cognitive Memory Layer for AI LLMs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "AI",
    "LLM",
    "Memory"
]

[project.urls]
Homepage = "https://github.com/tomwongs/resonance"
Issues = "https://github.com/tomwongs/resonance/issues"
